# myLib

./: .travis.yml  CMakeLists.txt  README.md  travis.sh
cmake/: CompilerFlags.cmake
public/include/myLib/: MyLib.hpp
src/: CMakeLists.txt  FirstObject.cpp  FirstObject.hpp  MyLib.cpp
tests/: CMakeLists.txt  FirstObject_test.cpp  MyLib_test.cpp
